--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -46,7 +46,7 @@
 
     <div class="hero-text-box">
       <svg class="hero-icon" width="52" height="51">
-        <use href="../img/symbol-defs.svg#icon-sun"></use>
+        <use href="./img/symbol-defs.svg#icon-sun"></use>
       </svg>
       <p class="text hero-text">all embroidery is made by hand</p>
     </div>
