--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -27,7 +27,7 @@
       <li class="testimonials__item" tabindex="0">
         <div class="testimonials__img-wrap">
           <img
-            src="../img/Sergiy.png"
+            src="./img/Sergiy.png"
             srcset="./img/Sergiy.png 1x, ./img/Sergiy@2x.png 2x"
             alt="Customer testimonial: 'Pleasantly surprised by Vyshyvanka Vibes' variety of embroidery."
             width="64"
