--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -5,29 +5,29 @@
       <picture class="order-picture">
         <source
           srcset="
-            ../img/your-order-tab.jpeg    1x,
-            ../img/your-order-tab@2x.jpeg 2x
+            ./img/your-order-tab.jpeg    1x,
+            ./img/your-order-tab@2x.jpeg 2x
           "
           media="(min-width: 768px)"
         />
         <source
           srcset="
-            ../img/your-order-desctop-small.jpeg    1x,
-            ../img/your-order-desctop-small@2x.jpeg 2x
+            ./img/your-order-desctop-small.jpeg    1x,
+            ./img/your-order-desctop-small@2x.jpeg 2x
           "
           media="(min-width: 1280px)"
         />
         <source
           srcset="
-            ../img/your-order-desctop.jpeg    1x,
-            ../img/your-order-desctop@2x.jpeg 2x
+            ./img/your-order-desctop.jpeg    1x,
+            ./img/your-order-desctop@2x.jpeg 2x
           "
           media="(min-width: 1440px)"
         />
 
         <img
           class="order-img"
-          src="../img/your-order-desctop.jpeg"
+          src="./img/your-order-desctop.jpeg"
           alt="vyshyvanka"
           width="524"
           height="521"
