--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
   <div class="header-container container">
     <img
       class="logo-img"
-      src="../img/logo.svg"
+      src="./img/logo.svg"
       alt="logo-icon"
       width="44"
       height="39"
@@ -46,7 +46,7 @@
           href="https://www.facebook.com/goITclub/ "
           target="_blank"
           ><svg class="soc-icon" width="28" height="28">
-            <use href="../img/symbol-defs.svg#icon-facebook"></use>
+            <use href="./img/symbol-defs.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
@@ -56,7 +56,7 @@
           href="https://www.instagram.com/goitclub/ "
           target="_blank"
           ><svg class="soc-icon" width="28" height="28">
-            <use href="../img/symbol-defs.svg#icon-instagram"></use>
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
@@ -66,7 +66,7 @@
           href="https://www.youtube.com/c/GoIT "
           target="_blank"
           ><svg class="soc-icon" width="28" height="28">
-            <use href="../img/symbol-defs.svg#icon-youtube"></use>
+            <use href="./img/symbol-defs.svg#icon-youtube"></use>
           </svg>
         </a>
       </li>
