--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -132,6 +132,7 @@
           src="./img/ornament-menu-mob.png"
           alt="Ornament"
           class="mobile-ornament"
+          loading="lazy"
         />
       </picture>
     </div>
