--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -37,13 +37,13 @@
 
 @media screen and (min-width: 768px) {
   .about-container {
-    max-width: 1280px;
+    max-width: 768px;
     margin-bottom: 50px;
     background-image: url(../img/ornament-about-use-tab.png);
     background-repeat: no-repeat;
     background-position: bottom right;
     background-size: auto 484px;
-    padding: 0 100px 80px;
+    padding: 0 32px 50px;
   }
 
   @media (min-device-pixer-ratio: 2),
@@ -57,13 +57,14 @@
 
 @media screen and (min-width: 1280px) {
   .about-container {
+    max-width: 1280px;
     margin-bottom: 70px;
     display: flex;
     flex-direction: row;
     background-image: url(../img/ornament-about-use-dsctop-smal.png);
     background-repeat: no-repeat;
     background-position: bottom right;
-    padding-bottom: 30px;
+    padding: 0 100px 80px 100px;
   }
 
   @media (min-device-pixer-ratio: 2),
