--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -90,9 +90,7 @@
           </li>
         </ul>
       </address>
-      <button data-menu-close type="button" class="menu-close">
-        <a href="#" class="close"></a>
-      </button>
+      <button data-menu-close type="button" class="menu-close" />
     </div>
     <div>
       <nav class="mob-header-navigation">
@@ -112,7 +110,7 @@
         </ul>
       </nav>
     </div>
-    <div image-container>
+    <div>
       <picture class="bottom-image">
         <source
           srcset="
