--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -4,10 +4,7 @@
     <div class="image-your-order">
       <picture class="order-picture">
         <source
-          srcset="
-            ./img/your-order-tab.jpeg    1x,
-            ./img/your-order-tab@2x.jpeg 2x
-          "
+          srcset="./img/your-order-tab.jpeg 1x, ./img/your-order-tab@2x.jpeg 2x"
           media="(min-width: 768px)"
         />
         <source
