--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,190 +1,154 @@
 /* HERO */
 
-.hero{
-  
-    padding-top: 60px;
-   margin-bottom: 80px;
-
-    
+.hero {
+  padding-top: 60px;
+  margin-bottom: 80px;
 }
-.absolut{
-display: none;
-}
-
-
-.hero-global-title{
- 
-  font-weight: 400;
-}
-.hero span{
-color: var(--white, #ECD979);
-}
-.hero-btn-box{
-  margin-left: 70px;
-} 
-
-.hero-btn{
-color: var(--white, #FCF9F9);
-font-size: 14px;
-font-weight: 600;
-line-height: normal;
-letter-spacing: -0.56px;
-text-transform: uppercase;
-border-radius: 15px;
-border: 1px solid rgba(252, 249, 249, 0.10);
-display: flex;
-          justify-content: center;
-          align-items: center;
-          gap: 10px;
-
-padding: 14px 36px;
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-max-width: 168px;
-height: 50px;
-margin-top: 20px;
-margin-bottom: 40px; 
-
-}
-.hero-btn:hover{
-border: 1px solid var(--yellow, #ECD979);
-}
-.hero-btn-icon{
-flex-shrink: 0;
-margin-left: 10px;
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-.hero-btn-icon:hover{
-transform: rotate(-30deg);    
-}
-.hero-global-img{
-  border-radius: 4px;
-}
-.hero-text-box{
+.absolut {
   display: none;
 }
-.hero-img{
-display: none;
+
+.hero-global-title {
+  font-weight: 400;
 }
-    
+.hero span {
+  color: var(--white, #ecd979);
+}
+.hero-btn-box {
+  margin-left: 70px;
+}
 
+.hero-btn {
+  color: var(--white, #fcf9f9);
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.56px;
+  text-transform: uppercase;
+  border-radius: 15px;
+  border: 1px solid rgba(252, 249, 249, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 
-    
-      @media screen and (min-width: 768px){
+  padding: 14px 36px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  max-width: 168px;
+  height: 50px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+.hero-btn:hover {
+  border: 1px solid var(--yellow, #ecd979);
+}
+.hero-btn-icon {
+  flex-shrink: 0;
+  margin-left: 10px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero-btn-icon:hover {
+  transform: rotate(-30deg);
+}
+.hero-global-img {
+  border-radius: 4px;
+}
+.hero-text-box {
+  display: none;
+}
+.hero-img {
+  display: none;
+}
 
-        .hero{
-         padding-top: 106px;
-          margin-bottom: 100px;
-          
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 106px;
+    margin-bottom: 100px;
+  }
+  .hero-container {
+    position: relative;
+  }
 
-         
-        }
-        .hero-container{
-          position: relative;
-        }
-        
-       
-         .hero-btn-box{
-          margin-left: 153px;
-        } 
-        
-        .hero-btn{
-          
-          font-size: 16px;
-            padding: 14px 39px;
-            margin-top: 40px;
-            max-width: 168px;
-        }
-        
-           
-            
-        .hero-text{
-            
-            text-align: center;
-             max-width: 115px;
-        }
-        .hero-text-box{
-          display: flex;
-          flex-direction: column;
-          gap: 16px;
-          align-items: center;
-          position: absolute;
-          /* padding-top: 84px;
+  .hero-btn-box {
+    margin-left: 153px;
+  }
+
+  .hero-btn {
+    font-size: 16px;
+    padding: 14px 39px;
+    margin-top: 40px;
+    max-width: 168px;
+  }
+
+  .hero-text {
+    text-align: center;
+    max-width: 115px;
+  }
+  .hero-text-box {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    position: absolute;
+    /* padding-top: 84px;
           padding-right: 32px; */
-         
-          right: 20px;
-          top: -22px;
-        } 
-              
-            .hero-global-title{
-            max-width: 549px;
-        }
-        
-        .hero-img{
-            display: block;
-            position: absolute;
-            right: 20px;
-            bottom: -110px;
-            /* padding-right: 23px; */
-           
-            }   }
-      
-      @media screen and (min-width: 1280px){
-        
-        .hero{
-        
-       padding-top: 100px;
-        margin-bottom: 150px;
-        
-        
-      }
-      .hero-row-reverse-box{
-        display: flex;
+
+    right: 20px;
+    top: -22px;
+  }
+
+  .hero-global-title {
+    max-width: 549px;
+  }
+
+  .hero-img {
+    display: block;
+    position: absolute;
+    right: 20px;
+    bottom: -110px;
+    /* padding-right: 23px; */
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero {
+    padding-top: 100px;
+    margin-bottom: 150px;
+  }
+  .hero-row-reverse-box {
+    display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
     gap: 40px;
-    }
-     
-      .hero-global-title{
-        font-size: 54px;
-        line-height: 1.16;    
-        max-width: 518px;
-        padding-top: 94px;
-        
-        } 
-        
-        .hero-btn-box{
-          margin-left: 181px;
-        } 
-        .hero-text-box{
-         
-          top: 0;
-        }
-        .hero-img{
-          
-          
-            bottom: -110px;
-          
-          }   
-    }
-      @media screen and (min-width: 1440px){
-        
+  }
 
-          .hero-global-title{
-            font-size: 64px;
-            line-height: 1.16;
-            max-width: 630px;
-            } 
-            .hero-text-box{
-             
-              
-              top: 94px;
-              
-            }
-            .hero-img{
-              
-              
-            bottom: -110px;
-              
-              }   
-           
-        }
+  .hero-global-title {
+    font-size: 54px;
+    line-height: 1.16;
+    max-width: 518px;
+    padding-top: 94px;
+  }
+
+  .hero-btn-box {
+    margin-left: 181px;
+  }
+  .hero-text-box {
+    top: 0;
+  }
+  .hero-img {
+    bottom: -110px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero-global-title {
+    font-size: 64px;
+    line-height: 1.16;
+    max-width: 630px;
+  }
+  .hero-text-box {
+    top: 94px;
+  }
+  .hero-img {
+    bottom: -110px;
+  }
+}
