--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,10 +5,14 @@
         <a class="header-menu-link link" href="#about-us">About us</a>
       </li>
       <li class="footer-item">
-        <a class="header-menu-link link" href="#our-collection">Our collection</a>
+        <a class="header-menu-link link" href="#our-collection"
+          >Our collection</a
+        >
       </li>
       <li class="footer-item">
-        <a class="header-menu-link link" href="#customer-order">Customer order</a>
+        <a class="header-menu-link link" href="#customer-order"
+          >Customer order</a
+        >
       </li>
       <li class="footer-item">
         <a class="header-menu-link link" href="#testimonials">Testimonials</a>
@@ -16,7 +20,8 @@
     </ul>
     <div class="container-footer-div">
       <h3 class="global-title title-footer">
-        A touch of <span class="ukrainian-span title-footer ">Ukrainian</span> culture in
+        A touch of
+        <span class="ukrainian-span title-footer">Ukrainian</span> culture in
         every embroidery
       </h3>
     </div>
