--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -90,7 +90,7 @@
           </li>
         </ul>
       </address>
-      <button data-menu-close type="button" class="menu-close" />
+      <button data-menu-close type="button" class="menu-close" ></button>
     </div>
     <div>
       <nav class="mob-header-navigation">
@@ -134,6 +134,7 @@
         />
       </picture>
     </div>
-    <script src="./js/menu.js"></script>
   </div>
 </header>
+<script src="./js/menu.js"></script>
+
