--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,5 +1,5 @@
 <section class="about-us" id="about-us">
-  <div class=" about-us-group container about-container">
+  <div class="about-us-group container about-container">
     <div class="about-group-text">
       <h2 class="title">About Us</h2>
       <ul class="about-list">
@@ -26,36 +26,51 @@
         </li>
       </ul>
     </div>
-   <picture>
-        <source
-        srcset="./img/girl-and-boy-desctop.jpeg 1x, ./img/girl-and-boy-desctop@2x.jpeg 2x"
-          media="(min-width: 1440px)"
-          width="709" height="545"
-        />
-        <source
-          srcset="./img/girl-and-boy-desctop-small.jpeg 1x, ./img/girl-and-boy-desctop-small@2x.jpeg 2x"
-          media="(min-width: 1280px)"
-          width="594" height="545"
-        />
-        <source
-          srcset="./img/girl-and-boy-tab.jpeg 1x, ./img/girl-and-boy-tab@2x.jpeg 2x"
-          media="(min-width: 768px)"
-          width="704" height="545"
-        />
-        <source
-         srcset="./img/girl-and-boy-mob.jpeg 1x, ./img/girl-and-boy-mob@2x.jpeg 2x"
-          media="(max-width: 767px)"
-          width="335" height="499"
-        />
-        <img
-        class="about-img-inner"
-          src="./img/girl-and-boy-desctop.jpeg"
-          loading="lazy"
-          alt="sleeve"
-          width="709"
-          height="545"
-        />
-      </picture>
     <picture>
+      <source
+        srcset="
+          ./img/girl-and-boy-desctop.jpeg    1x,
+          ./img/girl-and-boy-desctop@2x.jpeg 2x
+        "
+        media="(min-width: 1440px)"
+        width="709"
+        height="545"
+      />
+      <source
+        srcset="
+          ./img/girl-and-boy-desctop-small.jpeg    1x,
+          ./img/girl-and-boy-desctop-small@2x.jpeg 2x
+        "
+        media="(min-width: 1280px)"
+        width="594"
+        height="545"
+      />
+      <source
+        srcset="
+          ./img/girl-and-boy-tab.jpeg    1x,
+          ./img/girl-and-boy-tab@2x.jpeg 2x
+        "
+        media="(min-width: 768px)"
+        width="704"
+        height="545"
+      />
+      <source
+        srcset="
+          ./img/girl-and-boy-mob.jpeg    1x,
+          ./img/girl-and-boy-mob@2x.jpeg 2x
+        "
+        media="(max-width: 767px)"
+        width="335"
+        height="499"
+      />
+      <img
+        class="about-img-inner"
+        src="./img/girl-and-boy-desctop.jpeg"
+        loading="lazy"
+        alt="sleeve"
+        width="709"
+        height="545"
+      />
+    </picture>
   </div>
 </section>
